--- a/PlumbandCube/PlumbandCube.csproj
+++ b/PlumbandCube/PlumbandCube.csproj
@@ -55,7 +55,7 @@
   </Content>
   <None Remove="assets\plumbandcube\itemtypes\plumbandcube.json" />
   <None Remove="assets\plumbandcube\patches\REinforce_Overhaul.json" />
-  <None Remove="assets\plumbandcube\recipe\grid\plumbandcube.json" />
+  <None Remove="assets\plumbandcube\recipes\grid\plumbandcube.json" />
   <None Remove="assets\plumbandcube\shapes\item\tools\plumbandcube.json" />
   <Content Include="modinfo.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
